fix: KMIP tag naming inconsistencies and add missing cryptographic operation fields
Changes:
- KmipTag.java: Normalize X.509 and certificate field names to uppercase abbreviations
  - X509CertificateIdentifier → X_509CertificateIdentifier
  - X509CertificateIssuer → X_509CertificateIssuer
  - X509CertificateSubject → X_509CertificateSubject
  - Pkcs12FriendlyName → PKCS_12FriendlyName
  - Certificate subject/issuer abbreviations (CN, OU, ST, UID, DC, DN) to uppercase

- Cryptographic operation deserializers (JSON/TTLV/XML):
  - Add InitIndicator, FinalIndicator, and CorrelationValue field support to:
    - Decrypt, Encrypt, Hash, MAC, MACVerify, Sign, SignatureVerify operations
    - Both request and response payloads
  - Fix CredentialValueJsonDeserializer fallback handling for missing credential types

- Payload models: Add builder methods for InitIndicator, FinalIndicator, CorrelationValue

- Enhanced ProtectionStorageMask: Refactored for clarity and maintainability

- KeyFormatType enumeration: Extended with additional format types

- Removed DefaultsInformation.java in favor of ObjectDefaults consolidation

- Tests & benchmarks: Updated to reflect structural and field