@@ -10,6 +10,9 @@ import java.math.BigInteger;
 import java.nio.ByteBuffer;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
+import java.util.Collections;
+import java.util.List;
+
 import org.purpleBean.kmip.model.v2_1.structure.request.payload.SetDefaultsOpRequestPayload;
 import org.purpleBean.kmip.test.suite.AbstractTtlvSerializationTestSuite;
 import org.purpleBean.kmip.model.v2_1.structure.Attributes;
@@ -26,11 +29,11 @@ class SetDefaultsOpRequestPayloadTtlvTest extends AbstractTtlvSerializationTestS
 
     @Override
     public SetDefaultsOpRequestPayload createDefault() {
-        return SetDefaultsOpRequestPayload.builder().defaultsInformation(DefaultsInformation.of(java.util.List.of(ObjectDefaults.of(ObjectType.Standard.CERTIFICATE.inst(), Attributes.of(java.util.List.of()))))).build();
+        return SetDefaultsOpRequestPayload.builder().defaultsInformation(DefaultsInformation.of(List.of(ObjectDefaults.builder().objectType(ObjectType.Standard.CERTIFICATE.inst()).attributes(Attributes.of(Collections.emptyList())).build()))).build();
     }
 
     @Override
     public SetDefaultsOpRequestPayload createVariant() {
-        return SetDefaultsOpRequestPayload.builder().defaultsInformation(DefaultsInformation.of(java.util.List.of(ObjectDefaults.of(ObjectType.Standard.SYMMETRIC_KEY.inst(), Attributes.of(java.util.List.of()))))).build();
+        return SetDefaultsOpRequestPayload.builder().defaultsInformation(DefaultsInformation.of(List.of(ObjectDefaults.builder().objectType(ObjectType.Standard.SYMMETRIC_KEY.inst()).attributes(Attributes.of(Collections.emptyList())).build()))).build();
     }
 }
